Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130323

Dev Tools console autocompletion crashes renderer process

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • None
    • 6.8.0
    • WebEngine
    • None
    • Ubuntu 24.04
      clang 18.1.3
    • Linux/X11
    • ccecfdbf9 (126-based), 0073b295f (122-based), dce5f7197 (118-based)

      • Build Qt WebEngine from source with -developer-build -webengine-proprietary-codecs
      • Build and run `simplebrowser` project.
      • Open the developer tools
      • Go to the console tab
      • Type window.
      • Boom!

      The renderer process crashes with

      [19869:19869:1020/210331.824780:INFO:permission_manager_qt.cpp(83)] Unexpected unsupported Blink permission type: 10
      [19869:19869:1020/210331.824793:INFO:permission_manager_qt.cpp(111)] Unexpected unsupported WebEngine permission type: 0
      [19869:19869:1020/210331.824795:INFO:permission_manager_qt.cpp(83)] Unexpected unsupported Blink permission type: 37
      [19869:19869:1020/210331.824839:INFO:permission_manager_qt.cpp(83)] Unexpected unsupported Blink permission type: 10
      
      
      #
      # Fatal error in qt5/qtwebengine/src/3rdparty/chromium/v8/src/execution/local-isolate.cc, line 69
      # Debug check failed: !res.empty().
      #
      #
      #
      #FailureMessage Object: 0x79e7017f9b40#0 0x79e722d9083c base::debug::CollectStackTrace()
      #1 0x79e722d5562d base::debug::StackTrace::StackTrace()
      #2 0x79e722d555de base::debug::StackTrace::StackTrace()
      #3 0x79e7264ca3b7 gin::(anonymous namespace)::PrintStackTrace()
      #4 0x79e7264dba7d V8_Fatal()
      #5 0x79e7264db405 v8::base::(anonymous namespace)::DefaultDcheckHandler()
      #6 0x79e719d6dfa1 v8::internal::LocalIsolate::DefaultLocale[abi:cxx11]()
      #7 0x79e71a0ef3b2 v8::internal::Intl::CompareStringsOptionsFor<>()
      #8 0x79e71a65d128 v8::internal::maglev::MaglevGraphBuilder::TryReduceStringPrototypeLocaleCompare()
      #9 0x79e71a664343 v8::internal::maglev::MaglevGraphBuilder::TryReduceBuiltin()
      #10 0x79e71a64a142 v8::internal::maglev::MaglevGraphBuilder::ReduceCallForConstant()
      #11 0x79e71a65bf07 v8::internal::maglev::MaglevGraphBuilder::ReduceCall()
      #12 0x79e71a665aef v8::internal::maglev::MaglevGraphBuilder::BuildCallWithFeedback()
      #13 0x79e71a666392 v8::internal::maglev::MaglevGraphBuilder::BuildCallFromRegisters()
      #14 0x79e71a4cd6c8 v8::internal::maglev::MaglevGraphBuilder::VisitSingleBytecode()
      #15 0x79e71a4c9b30 v8::internal::maglev::MaglevGraphBuilder::BuildBody()
      #16 0x79e71a4c0917 v8::internal::maglev::MaglevGraphBuilder::Build()
      #17 0x79e71a4bfb9b v8::internal::maglev::MaglevCompiler::Compile()
      #18 0x79e71a63518b v8::internal::maglev::MaglevCompilationJob::ExecuteJobImpl()
      #19 0x79e719b8415c v8::internal::OptimizedCompilationJob::ExecuteJob()
      #20 0x79e71a79fa78 v8::internal::maglev::MaglevConcurrentDispatcher::JobTask::Run()
      #21 0x79e7264caf47 gin::V8Platform::CreateJobImpl()::$_0::operator()()
      #22 0x79e7264caf08 base::internal::FunctorTraits<>::Invoke<>()
      #23 0x79e7264caecd base::internal::InvokeHelper<>::MakeItSo<>()
      #24 0x79e7264cae85 base::internal::Invoker<>::RunImpl<>()
      #25 0x79e7264cae11 base::internal::Invoker<>::Run()
      #26 0x79e722c9d37b base::RepeatingCallback<>::Run()
      #27 0x79e722ca88a1 base::internal::JobTaskSourceOld::JobTaskSourceOld()::$_0::operator()()
      #28 0x79e722ca8840 base::internal::FunctorTraits<>::Invoke<>()
      #29 0x79e722ca881a base::internal::InvokeHelper<>::MakeItSo<>()
      #30 0x79e722ca87cd base::internal::Invoker<>::RunImpl<>()
      #31 0x79e722ca8769 base::internal::Invoker<>::Run()
      #32 0x79e715adafa6 base::OnceCallback<>::Run()
      #33 0x79e722c31cb8 base::TaskAnnotator::RunTaskImpl()
      #34 0x79e722cb5a57 base::TaskAnnotator::RunTask<>()
      #35 0x79e722cb5925 base::internal::TaskTracker::RunTaskImpl()
      #36 0x79e722cb597d base::internal::TaskTracker::RunSkipOnShutdown()
      #37 0x79e722cb5506 base::internal::TaskTracker::RunTaskWithShutdownBehavior()
      #38 0x79e722cb5339 base::internal::TaskTracker::RunTask()
      #39 0x79e722cb4944 base::internal::TaskTracker::RunAndPopNextTask()
      #40 0x79e722cd7c5a base::internal::WorkerThread::RunWorker()
      #41 0x79e722cd7615 base::internal::WorkerThread::RunPooledWorker()
      #42 0x79e722cd7520 base::internal::WorkerThread::ThreadMain()
      #43 0x79e722d3a689 base::(anonymous namespace)::ThreadFunc()
      #44 0x79e70fc9ca94 (/usr/lib/x86_64-linux-gnu/libc.so.6+0x9ca93)
      #45 0x79e70fd29a34 __clone
      [19869:19918:1020/210336.149317:ERROR:surface_manager.cc(436)] Old/orphaned temporary reference to SurfaceId(FrameSinkId[](0, 2), LocalSurfaceId(2, 1, 105C...))
      

        For Gerrit Dashboard: QTBUG-130323
        # Subject Branch Project Status CR V

            mnegyokru Martin Negyokru
            bterrier Benjamin Terrier
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes